# cargoless

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  ROADMAP.md  rust-toolchain.toml
.forgejo/workflows/: ci.yml  release.yml.draft
.github/workflows/: release.yml  release.yml.draft
bench/: .gitignore  M3-REPORT.md  batch-gate-concurrent.sh  batch-gate-throughput.sh  diffharness.sh  heavy-project-check-throughput.sh  m2-cpu-approx.sh  m3-fleet.sh  m3-roundtrip.py  modelr-fleet.sh  run-comparative.sh  run-throughput.sh  run.sh  throughput-recon.sh  throughput.py
bench/diffmatrix/: EXPECTED.tsv  README.md
bench/diffmatrix/cases/clean/: Cargo.toml
bench/diffmatrix/cases/clean/src/: lib.rs
bench/diffmatrix/cases/clippy-warn/: Cargo.toml
bench/diffmatrix/cases/clippy-warn/src/: lib.rs
bench/diffmatrix/cases/proc-macro/: README.md
bench/diffmatrix/cases/test-only-err/: Cargo.toml
bench/diffmatrix/cases/test-only-err/src/: lib.rs
bench/diffmatrix/cases/type-err/: Cargo.toml
bench/diffmatrix/cases/type-err/src/: lib.rs
bench/diffmatrix/cases/wasm-only-err/: Cargo.toml
bench/diffmatrix/cases/wasm-only-err/src/: lib.rs
bench/fixture/: Cargo.toml  Trunk.toml  index.html
bench/fixture/src/: app.rs  main.rs
bench/fixture/src/components/: counter.rs  form.rs  metrics.rs  mod.rs  nav.rs  todo.rs
bench/fixture/src/domain/: mod.rs  model.rs  validation.rs
bench/fixture/src/known_blind/: README.md  double_capture_move.rs  early_return_into_any.rs  generated_twin_unimported_type.rs
bench/fixture/src/pages/: about.rs  dashboard.rs  home.rs  mod.rs
bench/fixture/src/util/: format.rs  mod.rs
bench/harness/: Cargo.toml
bench/harness/src/: bench_main.rs  fsutil.rs  lib.rs  main.rs  proc.rs  stats.rs  tools.rs  verdict.rs
bench/harness/src/modes/: artifact.rs  checker.rs  mod.rs
bench/post-deploy/: README.md  m1-fleet-ram-vs-n.sh  m2-cpu-vs-coldpod.sh  m3-overlay-latency-split.sh  m4-corun-safety-oracle.sh  m5-restart-reap-hygiene.sh
crates/cargoless/: Cargo.toml
crates/cargoless-cas/: Cargo.toml
crates/cargoless-cas/src/: clean.rs  identity.rs  lib.rs  sha256.rs  tree.rs
crates/cargoless-core/: Cargo.toml  build.rs
crates/cargoless-core/src/: activity.rs  activitymgr.rs  analyzer.rs  appbuild.rs  appdrv.rs  appinstances.rs  appmanifest.rs  appstate.rs  appstatefile.rs  appsvc.rs  attribution.rs  barrier.rs  batch.rs  build.rs  cache_layout.rs  cluster.rs  clusterdrv.rs  clustermgr.rs  config.rs  corun.rs  diagnostics_store.rs  idle.rs  l4proxy.rs  lib.rs  lsp.rs  model.rs  multiplex.rs  overlay.rs  previewreg.rs  procmacro.rs  project_checks.rs  recovery.rs  repo.rs  shutdown.rs  watcher.rs  yamlscan.rs
crates/cargoless-core/src/repo/: topology.rs  watch.rs
crates/cargoless-core/src/transport/: discovery.rs  http.rs  inproc.rs  mod.rs  unix.rs
crates/cargoless-core/tests/: ac5_dedupe.rs  ac6_kill9.rs
crates/cargoless-proto/: Cargo.toml
crates/cargoless-proto/src/: lib.rs
crates/cargoless/src/: appserve.rs  batchcheck.rs  build.rs  check.rs  checks.rs  clean.rs  config.rs  cratemap.rs  main.rs  orphan.rs  preview.rs  push.rs  serve.rs  serveapi.rs  servedrv.rs  statusfile.rs  telemetry.rs  ui.rs  verdict.rs  watch.rs
crates/cargoless/tests/: checks_base_pruning.rs  diagnostics_field_finding_2.rs
crates/tf-cas/: Cargo.toml
crates/tf-cas/src/: identity.rs  lib.rs  sha256.rs  tree.rs
crates/tf-cli/: Cargo.toml
crates/tf-cli/src/: build.rs  check.rs  clean.rs  config.rs  holding.rs  main.rs  orphan.rs  serve.rs  status.rs  statusfile.rs  ui.rs  watch.rs
crates/tf-cli/tests/: diagnostics_field_finding_2.rs
crates/tf-core/: Cargo.toml
crates/tf-core/src/: analyzer.rs  build.rs  lib.rs  lsp.rs  model.rs  server.rs  structural.rs
crates/tf-core/tests/: ac5_dedupe.rs  ac6_kill9.rs  structural_trigger_bench.rs
crates/tf-proto/: Cargo.toml
crates/tf-proto/src/: lib.rs
deploy/: cargoless-appserve.Dockerfile  cargoless-appserve.k8s.yaml  cargoless-builder.k8s.yaml  cargoless-serve-shards.k8s.yaml  cargoless-serve-test.k8s.yaml  cargoless-serve.Dockerfile  cargoless-serve.k8s.yaml
deploy/jobs/: build-appserve-image.yaml  build-serve-image.yaml
docs/: DESIGN.md  EXECUTION.md  PREVIEW-STATUS.md  SERVE-IMAGE-BUILD.md
docs/bench/: AC7-THROUGHPUT-REPORT.md  HEAVY-PROJECT-CHECK-BATCHING.md
docs/design/: D-13-CRASH-RESTART.md  D-A2-RENEGOTIATION.md  D-APP-SERVE.md  D-CARGO-LOCK-MAINTENANCE.md  D-CI-RESILIENCE.md  D-DRIFT-GUARD.md  D-FLEET-SHARED-DAEMON.md  D-HOMEGA-RCA.md  D-IDLE-EVICT.md  D-INC2-2B.md  D-INC2-OBSERVABILITY.md  D-MERGE-QUEUE.md  D-OPENCLOSED.md  D-PROCMACRO-DOWNRANK.md  D-PROJECT-CHECKS.md  D-PUSHOVERLAY.md  D-RAM-TIERS.md  D-RELEASE.md  D-SELF-SERVE-PREVIEWS.md
docs/dogfood/: OPERATOR-FLEET-DEPLOYMENT-REPORT.md  PHASE-2-ADDENDUM.md  PHASE-2-REPORT.md  README.md  TF-MULTIVERSE-CANARY.md
docs/launch/: AC9-REVIEWER-PACKET.md  BLOG-DRAFT.md  D1-NAME-RECON.md  MODEL-R-NARRATIVE-DIFFMAP.md  NAMING-DRIFT-FIELD-CROSS-CHECK.md  NAMING-DRIFT-INVENTORY.md  NARRATIVE-FINALIZATION-DIFFMAP.md  SEQUENCE.md
docs/observability/: AC4-DIVERGENCE-RUNBOOK.md  cargoless-dashboard.json
docs/operator/: DEPLOY-MILESTONE-PRESTAGE.md  HANDOVER-2026-05-25-MINIMAL-OVERLAY.md  WITNESS-FOR-SWARM.md  pre-commit-hook-contract.md
docs/operator/examples/: cargoless.checks.ssr-witness.yaml
docs/release/: 97-DRY-RUN.diff  97-RENAME-RUNBOOK.md  PHASE-D-OPERATOR-HANDOFF.md
examples/: pre-commit-advisory.sh
scripts/: .d1-drift-allowlist  build-cargoless-serve-image  ci-gate  crates-io-preflight  d1-drift-guard  install-local  land-ff  tf-multiverse-canary  tf-multiverse-daemon  triple-guard-ff
scripts/stage1/: lib.sh  run-stage1.sh
