[workspace]
resolver = "3"
members = [
    "crates/tf-proto",
    "crates/tf-cas",
    "crates/tf-core",
    "crates/tf-cli",
]

[workspace.package]
edition = "2024"
rust-version = "1.85"
license = "Apache-2.0"
repository = "https://forgejo.triform.dev/triform/cargoless"
# NOTE: the published product name is open decision D1 (Plane CWDL-12).
# The repo/working identifier is "cargoless"; the shipping name is still the
# formal D1 decision. `tf` is NOT it — it collides with Terraform.

[workspace.lints.clippy]
all = "warn"

[profile.dev]
# Inner-loop builds must stay debug / no wasm-opt (plan AC#3 constraint).
opt-level = 0
debug = true
