[workspace]
resolver = "3"
members = [
    "crates/cargoless-proto",
    "crates/cargoless-cas",
    "crates/cargoless-core",
    "crates/cargoless",
]

[workspace.package]
edition = "2024"
rust-version = "1.85"
license = "Apache-2.0"
# CWDL-71 Phase B (2026-05-17): version hoisted into [workspace.package]
# per D-RELEASE §4.1. One number in one place — every crate inherits via
# `version.workspace = true`. The release.yml `tag-validate` job grep-extracts
# this value and asserts it matches the cut tag's semver; drift = hard fail.
# Bump in lockstep with every release tag. (0.0.0 = pre-launch state; first
# real release will be 0.1.0.)
version = "0.2.0"
# Canonical public source URL — resolved per D-RELEASE §8 #8 (operator picked
# option (b) GitHub mirror; URL confirmed 2026-05-17).
# Forgejo (forgejo.triform.dev/triform/cargoless) remains the internal
# integration-CI side: dedicated cargoless-builder pod, scripts/ci-gate,
# Forgejo Actions PR-gate, S1/AC#2 bench commit-status. See D-RELEASE §1.1.
# Mirror direction (§8 #9 (i)): Forgejo→GitHub push-mirror is LIVE
# (sync_on_commit=true; configured 2026-05-17).
# Also resolves: §8 #2 Mac builder via GH Actions free-tier macos-{13,14}.
repository = "https://github.com/TriformAI/cargoless"
# NOTE: the published product name is open decision D1 (Plane CWDL-12).
# The repo/working identifier is "cargoless"; the shipping name is still the
# formal D1 decision. `tf` is NOT it — it collides with Terraform.

[workspace.lints.clippy]
all = "warn"

[profile.dev]
# Inner-loop builds must stay debug / no wasm-opt (plan AC#3 constraint).
opt-level = 0
debug = true
