[package]
name = "cargoless-cas"
version.workspace = true  # CWDL-71 Phase B: inherits from [workspace.package]
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Content-addressed artifact store: trait + local-disk implementation. Remote backends are v1."

[lints]
workspace = true

[dependencies]
cargoless-proto = { path = "../cargoless-proto", version = "0.0.0" }  # publish-ready: explicit version required by `cargo publish` even with path
