[package]
name = "cargoless-core"
version.workspace = true  # CWDL-71 Phase B: inherits from [workspace.package]
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "The cargoless daemon: filesystem watcher, rust-analyzer wrapper, green/red model, build orchestration."

[lints]
workspace = true

[dependencies]
cargoless-proto = { path = "../cargoless-proto", version = "0.0.0" }  # publish-ready
cargoless-cas = { path = "../cargoless-cas", version = "0.0.0" }      # publish-ready
# Owner-added (daemon-core, Epic 2). notify 6.x: stable cross-platform FS
# backend (inotify/FSEvents/kqueue/ReadDirectoryChangesW), MSRV well under
# 1.85. Debounce + ignore are implemented in-crate (pure, unit-tested) rather
# than pulling notify-debouncer-* / the ignore crate, keeping the dep tree
# minimal for the CI-only build model.
notify = "6"
# Owner-added (daemon-core, Epic 2 / CWDL #4). serde_json for LSP JSON-RPC:
# we emit controlled requests but must robustly parse rust-analyzer's
# publishDiagnostics (nested arrays, escaped strings) — hand-rolled JSON there
# is a latent-bug factory. Uses Value + json! only (no serde_derive
# proc-macro), keeping cold-build cost (AC#1/#2) low. cargoless-proto stays
# serde-free; this dep is cargoless-core-local.
serde_json = "1"
