[package]
name = "cargoless-proto"
version.workspace = true  # CWDL-71 Phase B: inherits from [workspace.package]
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Shared contract types for the TF-Trunk daemon, build pipeline, and future remote backends."

[lints]
workspace = true

[dependencies]
