[package]
# D1 RESOLVED 2026-05-17 (operator decision; Plane CWDL-12 / D-RELEASE §8 #1
# + §8 #3 crate-name, both CLOSED): the shipping product name is `cargoless`
# (incumbent working name — uniquely free across crates.io/GitHub/npm/pypi
# per the D1-NAME-RECON evidence bundle). #97 (operator override of
# NAMING-DRIFT-INVENTORY Tier C): the internal libs are ALSO renamed to
# the single brand token — cargoless-{proto,cas,core} — and this crate's
# directory moved crates/tf-cli/ → crates/cargoless/ ([package]/[[bin]]
# name was already `cargoless` from #87). One-token brand everywhere.
# Phase-B `version.workspace = true` preserved unchanged below.
name = "cargoless"
version.workspace = true  # CWDL-71 Phase B: inherits from [workspace.package]
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "The cargoless binary (v0 headless). Subcommands: check, watch, build, status, clean."

[lints]
workspace = true

# `integration` gates the REAL `build --watch` publisher-drive wiring into
# build-cas's `cargoless_core::build::{BuildOrchestrator,read_latest_green}` +
# `cargoless_proto::PublishedArtifact`. Now DEFAULT (post-#29 convergence + post-#42
# main convergence): the integration symbols are resolved on current main, so
# the prior "off by default until convergence" workaround is obsolete. Closes
# F4 footgun where `cargo install <pubname>` (without `--features integration`)
# produced a binary whose `build` returned EX_UNAVAILABLE (honest stub, but
# bad UX for the canonical install path).
#
# Users who want the standalone holding-page semantics can still opt out via
# `--no-default-features`. A local-crate feature default does NOT alter
# Cargo.lock, so `--locked` semantics are unchanged. ci-gate's standard tier
# (cargo build --workspace --all-targets --locked) now exercises the
# integration path too — that's actually better coverage.
#
# Install consequence — the documented install command for outside users is:
#   cargo install --git https://github.com/TriformAI/cargoless.git cargoless \
#                 --branch main --locked
# (no `--features integration` needed anymore). The explicit `cargoless`
# package arg is REQUIRED because `cargo install --git` walks the entire repo
# for Cargo.toml files and refuses to pick when multiple installable binary
# crates exist — the bench/{harness,fixture} sub-workspaces produce
# `ra-latency`, `cargoless-bench`, and `cargoless-bench-fixture` binaries that
# cargo treats as install candidates. README install command reflects this.
[features]
default = ["integration"]
integration = []

[[bin]]
# D1 RESOLVED = `cargoless` (was placeholder `tftrunk`). Users type
# `cargoless check` / `cargoless watch` / etc. Auto-derives the
# `CARGO_BIN_EXE_cargoless` test env var (see tests/diagnostics_field_finding_2.rs).
name = "cargoless"
path = "src/main.rs"

[dependencies]
cargoless-core = { path = "../cargoless-core", version = "0.0.0" }  # publish-ready

# ──────────────────────────────────────────────────────────────────────────
# cargo-binstall metadata (release 0.1.0+ — see docs/design/D-RELEASE.md §7)
#
# Cargo treats [package.metadata.*] as opaque (it does NOT validate the
# contents), so this stub adds zero compile/test/fmt/clippy gate risk.
# Only `cargo-binstall` reads these keys, at install time on a user's
# machine, to fetch a prebuilt tarball instead of compiling from source.
#
# Status: D1 RESOLVED 2026-05-17 = `cargoless` (Plane CWDL-12 / D-RELEASE
# §8 #1 + §8 #3 CLOSED). bin-dir below is renamed to `cargoless` per
# builder-infra's binstall/CI spec; it stays in lockstep with
# `.github/workflows/release.yml`'s `BIN=cargoless` var (both landed in
# this same D1-rename commit — builder-infra ci-gate-reviews the pair).
#
# Template variables binstall resolves:
#   {repo}            — package.repository (workspace-inherited from root
#                       Cargo.toml → https://github.com/TriformAI/cargoless)
#   {name}            — package.name (the published crate name)
#   {version}         — package.version (without leading "v")
#   {target}          — target triple, e.g. x86_64-unknown-linux-gnu
#   {archive-suffix}  — derived from pkg-fmt, e.g. ".tgz"
#
# First release ships THREE prebuilts (D-RELEASE §3):
#   - x86_64-unknown-linux-gnu  (GH Actions ubuntu-latest)
#   - aarch64-apple-darwin       (GH Actions macos-14, Apple Silicon)
#   - x86_64-apple-darwin        (GH Actions macos-13, Intel)
# All three follow the same tarball layout, so ONE pkg-url template + ONE
# bin-dir entry covers all targets — no per-target overrides needed for
# 0.1.0. (Overrides example below is for hypothetical future Windows etc.)
# ──────────────────────────────────────────────────────────────────────────
[package.metadata.binstall]
# GitHub release-asset URL shape: /{owner}/{repo}/releases/download/v{version}/{file}
# (Forgejo follows the same convention, so the template is portable.)
# TODO(D-RELEASE §8 #6): verify on one throwaway test tag (e.g., v0.0.1-rc.1)
# before first real fire.
pkg-url = "{repo}/releases/download/v{version}/{name}-v{version}-{target}{archive-suffix}"
pkg-fmt = "tgz"

# Inside the tarball, layout is:
#   {name}-v{version}-{target}/
#     cargoless       ← the binary (D1 RESOLVED = cargoless, was tftrunk)
#     README.md
#     LICENSE
# D1 RESOLVED: bin-dir tail = `cargoless`, in lockstep with
# `.github/workflows/release.yml`'s `BIN=cargoless` var (Package tarball
# step). Both renamed together in this commit; pkg-url above is templated
# ({name} auto-resolves to package.name = cargoless) so it needs no edit.
bin-dir = "{name}-v{version}-{target}/cargoless"

# Per-target overrides not needed for 0.1.0 — all three triples
# (x86_64-unknown-linux-gnu, aarch64-apple-darwin, x86_64-apple-darwin)
# share the same tarball layout. If a future target needs a different
# layout (e.g., Windows .zip post-v1), add:
#   [package.metadata.binstall.overrides."x86_64-pc-windows-msvc"]
#   pkg-fmt = "zip"
#   bin-dir = "{name}-v{version}-{target}/cargoless.exe"
# Windows is v1 parking-lot per CLAUDE.md — not in 0.1.0 scope.
