[package]
# D1 RESOLVED 2026-05-17 (operator decision; Plane CWDL-12 / D-RELEASE §8 #1
# + §8 #3 crate-name, both CLOSED): the shipping product name is `cargoless`
# (incumbent working name — uniquely free across crates.io/GitHub/npm/pypi
# per the D1-NAME-RECON evidence bundle). #97 (operator override of
# NAMING-DRIFT-INVENTORY Tier C): the internal libs are ALSO renamed to
# the single brand token — cargoless-{proto,cas,core} — and this crate's
# directory moved crates/tf-cli/ → crates/cargoless/ ([package]/[[bin]]
# name was already `cargoless` from #87). One-token brand everywhere.
# Phase-B `version.workspace = true` preserved unchanged below.
name = "cargoless"
version.workspace = true  # CWDL-71 Phase B: inherits from [workspace.package]
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "The cargoless binary (v0 headless). Subcommands: check, watch, build, status, clean."

[lints]
workspace = true

# `integration` gates the REAL `build --watch` publisher-drive wiring into
# build-cas's `cargoless_core::build::{BuildOrchestrator,read_latest_green}` +
# `cargoless_proto::PublishedArtifact`. Now DEFAULT (post-#29 convergence + post-#42
# main convergence): the integration symbols are resolved on current main, so
# the prior "off by default until convergence" workaround is obsolete. Closes
# F4 footgun where `cargo install <pubname>` (without `--features integration`)
# produced a binary whose `build` returned EX_UNAVAILABLE (honest stub, but
# bad UX for the canonical install path).
#
# Users who want the standalone holding-page semantics can still opt out via
# `--no-default-features`. A local-crate feature default does NOT alter
# Cargo.lock, so `--locked` semantics are unchanged. ci-gate's standard tier
# (cargo build --workspace --all-targets --locked) now exercises the
# integration path too — that's actually better coverage.
#
# Install consequence — the documented install command for outside users is:
#   cargo install --git https://github.com/TriformAI/cargoless.git cargoless \
#                 --branch main --locked
# (no `--features integration` needed anymore). The explicit `cargoless`
# package arg is REQUIRED because `cargo install --git` walks the entire repo
# for Cargo.toml files and refuses to pick when multiple installable binary
# crates exist — the bench/{harness,fixture} sub-workspaces produce
# `ra-latency`, `cargoless-bench`, and `cargoless-bench-fixture` binaries that
# cargo treats as install candidates. README install command reflects this.
[features]
# `telemetry` (default-on) gates the OTEL+SigNoz exporter stack (#246 Wave-1).
# Off-by-feature builds skip the heavy OTel/tokio dep tree — binary-size
# discipline per plan §5a (< 20MB delta budget, operator number not CI gate).
# `tracing` + `tracing-subscriber` stay non-optional because the 5c keystone
# spans in servedrv.rs use `tracing` macros unconditionally; they degrade to
# no-ops when no global subscriber is installed (fail-soft contract).
default = ["integration", "telemetry"]
integration = []
telemetry = [
    "dep:tokio",
    "dep:tracing-opentelemetry",
    "dep:opentelemetry",
    "dep:opentelemetry-otlp",
    "dep:opentelemetry_sdk",
    "dep:opentelemetry-semantic-conventions",
]

[[bin]]
# D1 RESOLVED = `cargoless` (was placeholder `tftrunk`). Users type
# `cargoless check` / `cargoless watch` / etc. Auto-derives the
# `CARGO_BIN_EXE_cargoless` test env var (see tests/diagnostics_field_finding_2.rs).
name = "cargoless"
path = "src/main.rs"

[dependencies]
cargoless-core = { path = "../cargoless-core", version = "0.2.0" }  # publish-ready
serde_json = "1"

# ──────────────────────────────────────────────────────────────────────────
# #246 Wave-1 5a: OTEL + SigNoz telemetry stack.
#
# Versions + features mirror the canonical SigNoz Rust OTel guide (operator-
# supplied at decision time, supersedes earlier sync-HTTP framing in this
# branch's pre-rewrite f68447b). The async/tokio path is what SigNoz
# documents + tf-physics uses, so the cargoless binary aligns with the
# fleet's documented pattern at the transport level. Subcommands stay
# synchronous from their own perspective; tokio is the substrate the OTel
# exporter runs on (block-on-current-thread pattern in serve.rs).
#
# Always-on (no feature gate — these power the 5c keystone span macros):
#   `tracing` — span/event API at every 5c call site in servedrv.rs
#   `tracing-subscriber` (env-filter feature) — subscriber stack that
#     bridges to OTEL when `telemetry` feature is on, plain stderr otherwise
#
# Feature-gated under `telemetry` (default-on):
#   `tokio` — current-thread runtime substrate for the OTLP exporter.
#     Feature scope intentionally MINIMAL: rt + rt-multi-thread + macros +
#     time (NOT `full`). The daemon's existing sync code runs unchanged
#     inside `runtime.block_on(async { ... })`; tokio provides the async
#     substrate the OTel SDK needs, nothing more.
#   `tracing-opentelemetry` — bridges `tracing::Span` → opentelemetry trace
#   `opentelemetry` — SDK API surface (`trace` feature)
#   `opentelemetry_sdk` — provider/processor/sampler impls (`trace` +
#     `rt-tokio` features — the canonical pairing)
#   `opentelemetry-otlp` — OTLP exporter. Features: `trace`, `http-proto`
#     (binary protobuf — more efficient than JSON at scale), `reqwest-client`
#     (async HTTP transport). NOT `grpc-tonic` (gRPC) — HTTP/protobuf
#     matches the canonical SigNoz Rust guide + is wire-shape-equivalent
#     at the collector. NOT `tls-roots` — cargoless-serve hits the
#     in-cluster collector over plain HTTP; flip back to tls-roots only
#     if we ever target SigNoz Cloud direct.
#   `opentelemetry-semantic-conventions` — canonical attr-key constants
#     (`service.name`, `error.message`, etc.) so we don't drift from
#     fleet's resource-attr taxonomy
#
# Versions track the canonical doc (operator drop). `cargo update` resolves
# the inter-crate version matrix; the major.minor pins below are what the
# vendor guide recommends.
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "time"], optional = true }
tracing-opentelemetry = { version = "0.32", optional = true }
opentelemetry = { version = "0.31", optional = true, features = ["trace"] }
opentelemetry_sdk = { version = "0.31", optional = true, features = ["trace", "rt-tokio"] }
opentelemetry-otlp = { version = "0.31", optional = true, default-features = false, features = ["trace", "http-proto", "reqwest-blocking-client"] }
opentelemetry-semantic-conventions = { version = "0.31", optional = true }

# ──────────────────────────────────────────────────────────────────────────
# cargo-binstall metadata (release 0.1.0+ — see docs/design/D-RELEASE.md §7)
#
# Cargo treats [package.metadata.*] as opaque (it does NOT validate the
# contents), so this stub adds zero compile/test/fmt/clippy gate risk.
# Only `cargo-binstall` reads these keys, at install time on a user's
# machine, to fetch a prebuilt tarball instead of compiling from source.
#
# Status: D1 RESOLVED 2026-05-17 = `cargoless` (Plane CWDL-12 / D-RELEASE
# §8 #1 + §8 #3 CLOSED). bin-dir below is renamed to `cargoless` per
# builder-infra's binstall/CI spec; it stays in lockstep with
# `.github/workflows/release.yml`'s `BIN=cargoless` var (both landed in
# this same D1-rename commit — builder-infra ci-gate-reviews the pair).
#
# Template variables binstall resolves:
#   {repo}            — package.repository (workspace-inherited from root
#                       Cargo.toml → https://github.com/TriformAI/cargoless)
#   {name}            — package.name (the published crate name)
#   {version}         — package.version (without leading "v")
#   {target}          — target triple, e.g. x86_64-unknown-linux-gnu
#   {archive-suffix}  — derived from pkg-fmt, e.g. ".tgz"
#
# First release ships THREE prebuilts (D-RELEASE §3):
#   - x86_64-unknown-linux-gnu  (GH Actions ubuntu-latest)
#   - aarch64-apple-darwin       (GH Actions macos-14, Apple Silicon)
#   - x86_64-apple-darwin        (GH Actions macos-13, Intel)
# All three follow the same tarball layout, so ONE pkg-url template + ONE
# bin-dir entry covers all targets — no per-target overrides needed for
# 0.1.0. (Overrides example below is for hypothetical future Windows etc.)
# ──────────────────────────────────────────────────────────────────────────
[package.metadata.binstall]
# GitHub release-asset URL shape: /{owner}/{repo}/releases/download/v{version}/{file}
# (Forgejo follows the same convention, so the template is portable.)
# TODO(D-RELEASE §8 #6): verify on one throwaway test tag (e.g., v0.0.1-rc.1)
# before first real fire.
pkg-url = "{repo}/releases/download/v{version}/{name}-v{version}-{target}{archive-suffix}"
pkg-fmt = "tgz"

# Inside the tarball, layout is:
#   {name}-v{version}-{target}/
#     cargoless       ← the binary (D1 RESOLVED = cargoless, was tftrunk)
#     README.md
#     LICENSE
# D1 RESOLVED: bin-dir tail = `cargoless`, in lockstep with
# `.github/workflows/release.yml`'s `BIN=cargoless` var (Package tarball
# step). Both renamed together in this commit; pkg-url above is templated
# ({name} auto-resolves to package.name = cargoless) so it needs no edit.
bin-dir = "{name}-v{version}-{target}/cargoless"

# Per-target overrides not needed for 0.1.0 — all three triples
# (x86_64-unknown-linux-gnu, aarch64-apple-darwin, x86_64-apple-darwin)
# share the same tarball layout. If a future target needs a different
# layout (e.g., Windows .zip post-v1), add:
#   [package.metadata.binstall.overrides."x86_64-pc-windows-msvc"]
#   pkg-fmt = "zip"
#   bin-dir = "{name}-v{version}-{target}/cargoless.exe"
# Windows is v1 parking-lot per CLAUDE.md — not in 0.1.0 scope.
