[package]
name = "tf-cas"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Content-addressed artifact store: trait + local-disk implementation. Remote backends are v1."

[lints]
workspace = true

[dependencies]
tf-proto = { path = "../tf-proto" }
