[package]
name = "tf-cli"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "The cargoless binary (v0 headless). Subcommands: check, watch, build, status, clean."

[lints]
workspace = true

# `integration` gates the REAL `build --watch` publisher-drive wiring into
# build-cas's `tf_core::build::{BuildOrchestrator,read_latest_green}` +
# `tf_proto::PublishedArtifact`. Now DEFAULT (post-#29 convergence + post-#42
# main convergence): the integration symbols are resolved on current main, so
# the prior "off by default until convergence" workaround is obsolete. Closes
# F4 footgun where `cargo install <pubname>` (without `--features integration`)
# produced a binary whose `build` returned EX_UNAVAILABLE (honest stub, but
# bad UX for the canonical install path).
#
# Users who want the standalone holding-page semantics can still opt out via
# `--no-default-features`. A local-crate feature default does NOT alter
# Cargo.lock, so `--locked` semantics are unchanged. ci-gate's standard tier
# (cargo build --workspace --all-targets --locked) now exercises the
# integration path too — that's actually better coverage.
#
# Install consequence — the documented install command for outside users is:
#   cargo install --git https://github.com/TriformAI/cargoless.git tf-cli \
#                 --branch main --locked
# (no `--features integration` needed anymore). The explicit `tf-cli` package
# arg is REQUIRED because `cargo install --git` walks the entire repo for
# Cargo.toml files and refuses to pick when multiple installable binary crates
# exist — the bench/{harness,fixture} sub-workspaces produce `ra-latency`,
# `cargoless-bench`, and `cargoless-bench-fixture` binaries that cargo treats
# as install candidates. README install command (in agent/builder-infra's
# pending integration) reflects this.
[features]
default = ["integration"]
integration = []

[[bin]]
name = "tftrunk"
path = "src/main.rs"

[dependencies]
tf-core = { path = "../tf-core" }
