[package]
name = "tf-core"
version.workspace = true  # CWDL-71 Phase B: inherits from [workspace.package]
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "The TF-Trunk daemon: filesystem watcher, rust-analyzer wrapper, green/red model, build orchestration, dev server."

[lints]
workspace = true

[dependencies]
tf-proto = { path = "../tf-proto", version = "0.0.0" }  # publish-ready
tf-cas = { path = "../tf-cas", version = "0.0.0" }      # publish-ready
# Owner-added (daemon-core, Epic 2). notify 6.x: stable cross-platform FS
# backend (inotify/FSEvents/kqueue/ReadDirectoryChangesW), MSRV well under
# 1.85. Debounce + ignore are implemented in-crate (pure, unit-tested) rather
# than pulling notify-debouncer-* / the ignore crate, keeping the dep tree
# minimal for the CI-only build model.
notify = "6"
# Owner-added (daemon-core, Epic 2 / CWDL #4). serde_json for LSP JSON-RPC:
# we emit controlled requests but must robustly parse rust-analyzer's
# publishDiagnostics (nested arrays, escaped strings) — hand-rolled JSON there
# is a latent-bug factory. Uses Value + json! only (no serde_derive
# proc-macro), keeping cold-build cost (AC#1/#2) low. tf-proto stays
# serde-free; this dep is tf-core-local.
serde_json = "1"
